--- a/res/values/du_strings.xml
+++ b/res/values/du_strings.xml
@@ -271,4 +271,8 @@ phone.</string>
     <string name="changelog_summary">Recent Changes</string>
     <string name="changelog_loading">Loading changelog\u2026</string>
     <string name="changelog_error">Unable to load changelog</string>
+
+    <!-- FontEngine -->
+    <string name="font_picker_title">Font</string>
+    <string name="disable_fonts_installed_title">Font picker is unavailable to avoid conflicts with Substratum. Uninstall it if you wish to use the font picker.</string>
 </resources>
