--- a/res/xml/top_level_settings.xml
+++ b/res/xml/top_level_settings.xml
@@ -26,7 +26,8 @@
         android:summary="@string/dirtytweaks_summary"
         android:icon="@drawable/ic_settings_dirtytweaks"
         android:order="-130"
-        android:fragment="com.dirtyunicorns.tweaks.DirtyTweaks" />
+        android:fragment="com.dirtyunicorns.tweaks.DirtyTweaks"
+        settings:controller="com.dirtyunicorns.tweaks.TopLevelCorvusEntryPreferenceController" />
 
     <Preference
         android:key="top_level_themes"
@@ -41,7 +42,7 @@
         android:title="@string/network_dashboard_title"
         android:summary="@string/summary_placeholder"
         android:icon="@drawable/ic_homepage_network"
-        android:order="-120"
+        android:order="-130"
         android:fragment="com.android.settings.network.NetworkDashboardFragment"
         settings:controller="com.android.settings.network.TopLevelNetworkEntryPreferenceController"/>
 
@@ -50,7 +51,7 @@
         android:title="@string/connected_devices_dashboard_title"
         android:summary="@string/summary_placeholder"
         android:icon="@drawable/ic_homepage_connected_device"
-        android:order="-110"
+        android:order="-120"
         android:fragment="com.android.settings.connecteddevice.ConnectedDeviceDashboardFragment"
         settings:controller="com.android.settings.connecteddevice.TopLevelConnectedDevicesPreferenceController"/>
 
@@ -59,7 +60,7 @@
         android:title="@string/app_and_notification_dashboard_title"
         android:summary="@string/app_and_notification_dashboard_summary"
         android:icon="@drawable/ic_homepage_apps"
-        android:order="-100"
+        android:order="-110"
         android:fragment="com.android.settings.applications.AppAndNotificationDashboardFragment"/>
 
     <Preference
