--- a/res/values/du_strings.xml
+++ b/res/values/du_strings.xml
@@ -276,4 +276,8 @@ phone.</string>
     <string name="font_picker_title">Font</string>
     <string name="disable_fonts_installed_title">Font picker is unavailable to avoid conflicts with Substratum. Uninstall it if you wish to use the font picker.</string>
     <string name="font_picker_progress">Applying new font\u2026</string>
+
+    <!-- Swipe up for face unlock -->
+    <string name="security_settings_face_require_swipe">Swipe up to unlock</string>
+    <string name="security_settings_face_require_swipe_summary">Swipe up on the lockscreen to use face unlock</string>
 </resources>
